--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Daring Fireball</title>
-	<meta name="viewport" content="width=500, minimum-scale=0.45" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="apple-touch-icon-precomposed" href="/graphics/apple-touch-icon.png" />
 	<link rel="shortcut icon" href="/graphics/favicon.ico?v=005" />
 	<link rel="mask-icon" href="/graphics/dfstar.svg" color="#4a525a">
-	<link rel="stylesheet" type="text/css" media="screen"  href="/css/fireball_screen.css?v1.91" />
+	<link rel="stylesheet" type="text/css" media="screen"  href="css/fireball_screen.css?v1.91" />
 	<link rel="stylesheet" type="text/css" media="screen"  href="/css/ie_sucks.php" />
 	<link rel="stylesheet" type="text/css" media="print"   href="/css/fireball_print.css?v01" />
 	<link rel="alternate"  type="application/atom+xml"     href="/feeds/main" />
@@ -20,7 +20,7 @@
 <div id="Box">
 
 	<div id="Banner">
-		<a href="/" title="Daring Fireball: Home"><img src="/graphics/logos/" alt="Daring Fireball" height="56" /></a>
+		<a href="/" title="Daring Fireball: Home"><img src="https://daringfireball.net/graphics/logos/" alt="Daring Fireball" height="56" /></a>
 	</div>
 
 	<div id="Sidebar">
@@ -61,7 +61,7 @@
 
 		<div id="SidebarMartini">
 			<a href="https://www.kickstarter.com/projects/hypershop/hyperdrive-worlds-1st-usb-c-hub-for-ipad-pro-2018?ref=evh8mr">
-				<img alt="HyperDrive" src="/martini/2019/01/hyperdrive-2.png" height="90">
+				<img alt="HyperDrive" src="https://daringfireball.net/martini/2019/01/hyperdrive-2.png" height="90">
 			</a>
 			<p><a href="https://www.kickstarter.com/projects/hypershop/hyperdrive-worlds-1st-usb-c-hub-for-ipad-pro-2018?ref=evh8mr">HyperDrive</a>: world’s first USB-C hub for 2018 iPad Pro — get up to 50% off on Kickstarter today!</p>
 		</div>
